<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:layout_margin="15dp"
        android:alpha="0.83"
        android:background="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/city_main"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginHorizontal="5dp"
            android:alpha="0.83"
            android:background="#0694BF"
            android:text="@string/city"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/rain_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/rain_main"
            android:layout_width="126dp"
            android:layout_height="117dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rn" />

        <TextView
            android:id="@+id/temperature_main"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/temperature"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/rain_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_main" />

        <TextView
            android:id="@+id/feel_like_temperature_main"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/feels_like_temperature"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/rain_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature_main" />

        <TextView
            android:id="@+id/rain_action_main"
            android:layout_width="287dp"
            android:layout_height="41dp"
            android:text="@string/rain_action"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/rain_main" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="51dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feel_like_temperature_main"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_hour"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:alpha="0.83"
        android:background="@color/background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vertical_list_day"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:alpha="0.92"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_hour"/>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_margin="15dp"
        android:background="@color/teal_700"
        android:alpha="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>